do not show update notification on mobile, fix overlapping of header menus, fix #10544

--- a/core/css/mobile.css
+++ b/core/css/mobile.css
@@ -54,6 +54,11 @@
 	display: none;
 }
 
+/* do not show update notification on mobile */
+#update-notification {
+	display: none !important;
+}
+
 /* position share dropdown */
 #dropdown {
 	margin-right: 10% !important;
